sync up with openshift version fixed some odd syntax issues now using cdn libraries fix ups for bug show/edit dialog

--- a/bugtrack.css
+++ b/bugtrack.css
@@ -168,7 +168,7 @@ div#group,div#group2 {
 
 .bugform {
 	text-align: left;
-	width: 500px;
+	/*width: 500px;*/
 	margin-left: auto;
 	margin-right: auto;
 }
